--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ DB_HOST=your_database_host
 DB_DATABASE=your_database_name
 DB_PASSWORD=your_database_password
 DB_PORT=your_database_port
+PORT=3000
 
 # Customizable variables for PostgreSQL queries
 DB_TABLE_NAME=your_table
-DB_DATA_FIELD=data_field
